--- a/index.html
+++ b/index.html
@@ -299,14 +299,14 @@
     <main>
         <section id="hero">
             <h1>Hi, I'm Abdulla Zorba</h1>
-            <p>A passionate junior Data Analyst specializing in creating insightful dashboards and impactful visualizations.</p>
+            <p>A passionate Data Analyst specializing in creating insightful dashboards and impactful visualizations.</p>
             <a href="#powerbi" class="cta-button">View My Work</a>
         </section>
 
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Hello! I am Abdulla Zorba, a results-driven junior professional with expertise in data analysis, business intelligence, and creating actionable insights from complex datasets. My journey in data has equipped me with strong skills in tools like Power BI, SQL, Python, and Excel. I thrive on transforming raw data into compelling stories that drive strategic decisions.
+                Hello! I am Abdulla Zorba, a results-driven junior with expertise in data analysis, business intelligence, and creating actionable insights from complex datasets. My journey in data has equipped me with strong skills in tools like Power BI, SQL, Python, and Excel. I thrive on transforming raw data into compelling stories that drive strategic decisions.
             </p>
             <div class="skills-grid">
                 <div class="skill-item">
