--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Hello! I am Abdulla Zorba, a results-driven junior with expertise in data analysis, business intelligence, and creating actionable insights from complex datasets. My journey in data has equipped me with strong skills in tools like Power BI, SQL, Python, and Excel. I thrive on transforming raw data into compelling stories that drive strategic decisions.
+                Hello! I am Abdulla Zorba, a results-driven data professional with expertise in data analysis, business intelligence, and creating actionable insights from complex datasets. My journey in data has equipped me with strong skills in tools like Power BI, SQL, Python, and Excel. I thrive on transforming raw data into compelling stories that drive strategic decisions.
             </p>
             <div class="skills-grid">
                 <div class="skill-item">
